- Fixed bug where the time listed in .xml products couldn't be properly interpreted if trailing zeros were concatenated
- Fixed display bug of bin limits
- Fixed bug causing exposure reports to be sorted incorrectly

New Features
------------
- Added specialized formatting for CTI-Gal validation test results
- Added specialized formatting for Shear Bias validation test results
- Added specialized formatting for DataProc validation test results
- Added standalone script to build an individual report, "build_report.py"
- Test results products contained within tarballs can now be found in subdirs within the tarball
- Added script "pack_results_tarball.py" to create a tarball of a test results data product and the datafiles it points
  to
- Added default formatting for any textfiles included with test results
- Added PEP8-format-checking stage to CI pipeline (only for feature branches, not master)
- Added Euclid logo in top-left corner of all pages

New config features
-------------------

Miscellaneous
-------------
- Filled out README.md with details of project functionality
- Project can now be installed via Python's setuptools
- Added this CHANGELOG
- Added CONTRIBUTING.md
- Added requirements.txt
- Improved logging/exception raising for if a provided specialization key isn't recognized
- Both jobs in the "pretest" stage of the CI pipeline have been combined into a single job to reduce overhead costs


Changes in v1.0
===============

API Changes
-----------

Dependency Changes
------------------
- Now requires numpy 1.20.3

Deprecated Features
-------------------

Bug Fixes
---------

New Features
------------
- Now supports automatic generation of test reports (in MVP stage) from files listed in "manifest.json" and contained
  in the "data/" directory

New config features
-------------------

Miscellaneous
-------------


--Versions prior to 1.0 not tracked in changelog--