@@ -35,14 +35,8 @@ def test_get_qualified_path():
     """Unit test of the `get_qualified_path` method.
     """
 
-    cwd = os.getcwd()
+    cwd = os.path.normpath(os.getcwd())
     parent_dir = os.path.split(cwd)[0]
-
-    # Add trailing slashes to `cwd` and `parent_dir` to match how we expect to get results
-    if not cwd.endswith("/"):
-        cwd = f"{cwd}/"
-    if not parent_dir.endswith("/"):
-        parent_dir = f"{parent_dir}/"
 
     test_base = "/test/base"
     test_relative_path = "relpath/to/file.txt"
@@ -55,8 +49,8 @@ def test_get_qualified_path():
     assert get_qualified_path(f"./{test_relative_path}") == os.path.join(cwd, test_relative_path)
     assert get_qualified_path(f"../{test_relative_path}") == os.path.join(parent_dir, test_relative_path)
 
-    assert get_qualified_path(".") == cwd
-    assert get_qualified_path("..") == parent_dir
+    assert get_qualified_path("../../tests/python") == cwd
+    assert get_qualified_path("../../tests") == parent_dir
 
     assert get_qualified_path(test_relative_path, base=test_base) == os.path.join(test_base, test_relative_path)
 
